Lag issue solved